# VoxelConeTracingGI

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.cache/clangd/index/: VkBootstrap.cpp.0FE1A0DA18A8ACF9.idx  VkBootstrap.h.1FAB75A77EF835DD.idx  VkBootstrapDispatch.h.49169BD82A4DEFED.idx  _fixes.hpp.016D5936E3C1FC01.idx  _vectorize.hpp.9BADC4AC52426997.idx  async.cpp.0683DFE540E4BAFC.idx  async.h.BC73117E99C30C8D.idx  async_logger-inl.h.836B4F40B21D02E8.idx  async_logger.h.3247AC877E7A9090.idx  backtracer-inl.h.2DEE8D180EF7FE08.idx  backtracer.h.6A50E650DD2FF285.idx  base64.cpp.DDCFEBC0C127D409.idx  base64.hpp.A5833851718CB6E9.idx  base_sink-inl.h.992F99CCFBFDA5C3.idx  base_sink.h.AA8AD522A889A213.idx  basic_file_sink-inl.h.2E78166E5706A7F5.idx  basic_file_sink.h.B1C0C6FAAC015872.idx  build_stb.cpp.768FBF098F680920.idx  build_vma.cpp.3B4C7B4D02BEBAEE.idx  bundled_fmtlib_format.cpp.BAF041F580E5A27F.idx  cfg.cpp.0F4481F06B4DE7F7.idx  circular_q.h.903DE1A8E581C89E.idx  color_sinks.cpp.615753526D418A31.idx  common-inl.h.551B2B145D4ED68A.idx  common.h.912BC0E0C94F5F06.idx  common.hpp.EA2364471DA4F845.idx  compute_common.hpp.75DB9C8ADE1B2F83.idx  compute_vector_relational.hpp.47FFE0DA23854DFC.idx  console_globals.h.026EA58509D4376C.idx  constants.hpp.04AF28A8BDAD5074.idx  constants.inl.EA3975E816342104.idx  context.c.25597581CA09771E.idx  core.h.F8FBF8C6C6401282.idx  core.hpp.BA3D4D30693AA883.idx  dual_quaternion.hpp.4741BFCA4A582977.idx  dual_quaternion.inl.DDAFB66BC9F50E1A.idx  egl_context.c.2A5F198E070890C2.idx  epsilon.hpp.E84720FBCAE7BAEE.idx  epsilon.inl.AEA7047D1B0B4C02.idx  exponential.hpp.4C84596B0EE75B6A.idx  (+255 more)
data/models/: Sponza.gltf  cornell_box.blend  cornell_box.blend1  cornell_box.gltf  gi_box.gltf
data/shaders/: calc_direct_light  calc_shadows_pcf  default_lit.frag  default_lit.vert  global_set  imgui.frag  lights  material_set  merge_voxels.comp  point_lights  point_shadow.frag  point_shadow.geom  point_shadow.vert  voxelize.frag  voxelize.geom  voxelize.vert
source/: CMakeLists.txt  allocator.cpp  allocator.hpp  build_stb.cpp  build_vma.cpp  context.cpp  context.hpp  descriptor.cpp  descriptor.hpp  input.cpp  input.hpp  main.cpp  pipelines.cpp  pipelines.hpp  render_graph.cpp  render_graph.hpp  renderer.cpp  renderer.hpp  renderer_types.hpp  scene.cpp  scene.hpp  types.hpp
